--- a/14 综合评价方法/14.2 综合评价数据处理.ipynb
+++ b/14 综合评价方法/14.2 综合评价数据处理.ipynb
@@ -226,17 +226,17 @@
      "output_type": "stream",
      "text": [
       "[[0.2857 0.     0.6667 0.5    0.5    1.    ]\n",
-      " [1.     1.     0.     1.     0.     0.    ]\n",
-      " [0.     0.4167 1.     0.     1.     0.4   ]\n",
-      " [0.5714 0.25   0.6667 0.25   0.5    0.    ]]\n"
+      " [1.     1.     0.     0.     0.     0.    ]\n",
+      " [0.     0.4167 1.     1.     1.     0.4   ]\n",
+      " [0.5714 0.25   0.6667 0.75   0.5    0.    ]]\n"
      ]
     }
    ],
    "source": [
-    "# 第四列数据错误，有极小型指标时不建议使用 sklearn\n",
     "from sklearn import preprocessing\n",
     "scaler = preprocessing.MinMaxScaler(feature_range=(0, 1)).fit(data)\n",
     "data_scaled = scaler.transform(data)\n",
+    "data_scaled[:, 3] = 1 - data_scaled[:, 3]   # 额外变换\n",
     "print(np.round(data_scaled, 4))      # 极差变换"
    ]
   },
@@ -257,6 +257,7 @@
     }
    ],
    "source": [
+    "data_scaled[:, 3] = 1 - data_scaled[:, 3]   # 重做额外变换的逆\n",
     "data_ori = scaler.inverse_transform(data_scaled)    # 标准化数据转化为原始数据\n",
     "print(data_ori)     # data_ori == data"
    ]
