--- a/14 综合评价方法/14 hw.ipynb
+++ b/14 综合评价方法/14 hw.ipynb
@@ -7,7 +7,8 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "from sklearn.op"
    ]
   },
   {
