--- a/14 综合评价方法/14.3 常用的综合评价数学模型.ipynb
+++ b/14 综合评价方法/14.3 常用的综合评价数学模型.ipynb
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -139,19 +139,9 @@
       "TOPSIS 评价值：\n",
       "[0.5236 0.3747 0.5975 0.3659]\n",
       "\n",
-      "TOPSIS 排名(降序):\n",
-      "[3 1 2 4]\n"
+      "TOPSIS 排名:\n",
+      "[2 3 1 4]\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "array([2, 3, 1, 4])"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -163,9 +153,8 @@
     "score = d_neg/(d_neg+d_pos)\n",
     "print(\"TOPSIS 评价值：\\n\", np.round(score, 4), sep='')\n",
     "\n",
-    "rank = np.arange(1, len(B)+1)[np.argsort(-score)]\n",
-    "print(\"\\nTOPSIS 排名(降序):\\n\", rank, sep='')\n",
-    "np.arange(1, 5)[np.argsort(np.argsort(-score))]"
+    "rank = np.argsort(np.argsort(-score)) + 1\n",
+    "print(\"\\nTOPSIS 排名:\\n\", rank, sep='')"
    ]
   },
   {
@@ -186,8 +175,8 @@
       "灰色关联度：\n",
       "[0.6798 0.6522 0.7576 0.6238]\n",
       "\n",
-      "灰色关联度排名(降序):\n",
-      "[3 1 2 4]\n"
+      "灰色关联度排名:\n",
+      "[2 3 1 4]\n"
      ]
     }
    ],
@@ -201,8 +190,8 @@
     "score = np.sum(co_co, axis=1)/len(co_co[0])\n",
     "print(\"\\n灰色关联度：\\n\", np.round(score, 4), sep='')\n",
     "\n",
-    "rank = np.arange(1, len(B)+1)[np.argsort(-score)]\n",
-    "print(\"\\n灰色关联度排名(降序):\\n\", rank, sep='')"
+    "rank = np.argsort(np.argsort(-score)) + 1\n",
+    "print(\"\\n灰色关联度排名:\\n\", rank, sep='')"
    ]
   },
   {
@@ -218,8 +207,8 @@
       "熵值法评价值：\n",
       "[0.2787 0.21   0.2865 0.2248]\n",
       "\n",
-      "熵值法排名(降序):\n",
-      "[3 1 4 2]\n"
+      "熵值法排名:\n",
+      "[2 4 1 3]\n"
      ]
     }
    ],
@@ -232,8 +221,8 @@
     "score = np.sum(w*P, axis=1)\n",
     "print(\"\\n熵值法评价值：\\n\", np.round(score, 4), sep='')\n",
     "\n",
-    "rank = np.arange(1, len(B)+1)[np.argsort(-score)]\n",
-    "print(\"\\n熵值法排名(降序):\\n\", rank, sep='')"
+    "rank = np.argsort(np.argsort(-score)) + 1\n",
+    "print(\"\\n熵值法排名:\\n\", rank, sep='')"
    ]
   },
   {
@@ -249,8 +238,8 @@
       "秩和比法评价值：\n",
       "[0.625  0.6458 0.6667 0.5625]\n",
       "\n",
-      "秩和比法排名(降序):\n",
-      "[3 2 1 4]\n"
+      "秩和比法排名:\n",
+      "[2 4 1 3]\n"
      ]
     }
    ],
@@ -263,8 +252,8 @@
     "RSR = np.sum(R, axis=1) / (n*m)\n",
     "print(\"\\n秩和比法评价值：\\n\", np.round(RSR, 4), sep='')\n",
     "\n",
-    "rank = np.arange(1, len(B)+1)[np.argsort(-RSR)]\n",
-    "print(\"\\n秩和比法排名(降序):\\n\", rank, sep='')"
+    "rank = np.argsort(np.argsort(-score)) + 1\n",
+    "print(\"\\n秩和比法排名:\\n\", rank, sep='')"
    ]
   }
  ],
