--- a/14 综合评价方法/14.3 常用的综合评价数学模型.ipynb
+++ b/14 综合评价方法/14.3 常用的综合评价数学模型.ipynb
@@ -239,7 +239,7 @@
       "[0.625  0.6458 0.6667 0.5625]\n",
       "\n",
       "秩和比法排名:\n",
-      "[2 4 1 3]\n"
+      "[3 2 1 4]\n"
      ]
     }
    ],
@@ -252,7 +252,7 @@
     "RSR = np.sum(R, axis=1) / (n*m)\n",
     "print(\"\\n秩和比法评价值：\\n\", np.round(RSR, 4), sep='')\n",
     "\n",
-    "rank = np.argsort(np.argsort(-score)) + 1\n",
+    "rank = np.argsort(np.argsort(-RSR)) + 1\n",
     "print(\"\\n秩和比法排名:\\n\", rank, sep='')"
    ]
   }
