--- a/16 博弈论/16.1 基本概念.ipynb
+++ b/16 博弈论/16.1 基本概念.ipynb
@@ -52,10 +52,21 @@
   }
  ],
  "metadata": {
-  "language_info": {
-   "name": "python"
+  "kernelspec": {
+   "display_name": "Python 3.9.12 ('mamo')",
+   "language": "python",
+   "name": "python3"
   },
-  "orig_nbformat": 4
+  "language_info": {
+   "name": "python",
+   "version": "3.9.12"
+  },
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "bc4866e053c759d6a7b6c75a6ee7f30413af3cb1408278924a32b7c27fdde7d0"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
