--- a/14 综合评价方法/14.3 常用的综合评价数学模型.ipynb
+++ b/14 综合评价方法/14.3 常用的综合评价数学模型.ipynb
@@ -22,7 +22,7 @@
    "metadata": {},
    "source": [
     "### 14.3.2 TOPSIS 法\n",
-    "理想解的排序方法 (**T**echnique for **O**rder **P**reference by **S**imilaritu to **I**deal **S**olution)\n",
+    "理想解的排序方法 (**T**echnique for **O**rder **P**reference by **S**imilarity to **I**deal **S**olution)\n",
     "\n",
     "虚构两个解：正理想解（最佳对象）和负理想解（最差对象），计算每个评价对象与两个虚构解的距离 $s_i^+, s_i^-$，以此对各评价对象进行优劣排序。相对接近度\n",
     "$$\n",
